--- a/public/css/yura_estilos.css
+++ b/public/css/yura_estilos.css
@@ -22,32 +22,38 @@
     box-shadow: 10px 10px 5px 0px rgba(239, 252, 53, 0.71);
 }
 
-.table-skin-blue, .table-skin-blue-light {
+.table-skin-blue,
+.table-skin-blue-light {
     background-color: #3c8dbc;
     color: white;
 }
 
-.table-skin-red, .table-skin-red-light {
+.table-skin-red,
+.table-skin-red-light {
     background-color: #dd4b39;
     color: white;
 }
 
-.table-skin-black, .table-skin-black-light {
+.table-skin-black,
+.table-skin-black-light {
     background-color: #fff;
     color: black;
 }
 
-.table-skin-purple, .table-skin-purple-light {
+.table-skin-purple,
+.table-skin-purple-light {
     background-color: #605ca8;
     color: white;
 }
 
-.table-skin-green, .table-skin-green-light {
+.table-skin-green,
+.table-skin-green-light {
     background-color: #00a65a;
     color: white;
 }
 
-.table-skin-yellow, .table-skin-yellow-light {
+.table-skin-yellow,
+.table-skin-yellow-light {
     background-color: #f39c12;
     color: white;
 }
@@ -115,8 +121,8 @@
     opacity: 1;
 }
 
-div span.input-group-addon + input + label.error,
-div span.input-group-addon + select + label.error {
+div span.input-group-addon+input+label.error,
+div span.input-group-addon+select+label.error {
     position: absolute;
     width: 100%;
     top: 37px;
@@ -128,7 +134,7 @@ div span.input-group-addon + select + label.error {
     margin-bottom: 25px;
 }
 
-div.form-group textarea + label.error {
+div.form-group textarea+label.error {
     top: 57px
 }
 
@@ -353,7 +359,8 @@ table.dataTable thead .sorting_desc_disabled:after {
     color: white;
 }
 
-.modal-content, .alert {
+.modal-content,
+.alert {
     border-radius: 20px !important;
 }
 
@@ -386,12 +393,15 @@ table.dataTable thead .sorting_desc_disabled:after {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
     }
 }
 
-.nav-pills > li.active > a, .nav-pills > li.active > a:focus, .nav-pills > li.active > a:hover {
+.nav-pills>li.active>a,
+.nav-pills>li.active>a:focus,
+.nav-pills>li.active>a:hover {
     color: #fff;
     background-color: #00B388 !important;
     border-top-color: #003628 !important;
@@ -412,21 +422,33 @@ table.dataTable thead .sorting_desc_disabled:after {
     padding-right: 10px !important;
 }
 
-.text-white{
-    color:white!important
+.text-white {
+    color: white !important
 }
 
 .bg-success {
     background-color: #00B388 !important;
-    color:white
+    color: white
 }
 
-th{
+th {
     vertical-align: middle;
 }
 
-.tr_fija_top_0{
+.tr_fija_top_0 {
     position: sticky;
     top: 0;
+    z-index: 9;
+}
+
+.tr_fija_bottom_0 {
+    position: sticky;
+    bottom: 0;
+    z-index: 9;
+}
+
+.col_fija_left_0 {
+    position: sticky;
+    left: 0;
     z-index: 9;
 }
